wwwroot/css/layout.css
@import "./theme.css";

body {
  --head-height: 4rem;
}

main, footer {
  margin-left: 18rem;
  margin-top: calc(1rem + var(--head-height));
}

header {
  position: fixed;
  top: 0;
  height: var(--head-height);
  width: 100%;
  background-color: white;
}
  
header * {
  text-decoration: none;
  list-style: none;
  user-select: none;
}
  
header .logo {
  color: var(--main-color);
  font-size: 32px;
  font-weight: 700;
  line-height: var(--head-height);
  margin-left: 3rem;
}
  
header ul {
  float: right;
  margin-right: 3rem;
  padding: 0;
  height: var(--head-height);
}
  
header li {
  display: inline-block;
  line-height: var(--head-height);
  margin: 0 0.3rem;
}

header li a{
  color: var(--normal-grey);
  font-size: 15px;
  font-weight: 500;
  padding: 0.5rem 0.7rem;
  border: 2px solid var(--border-color);
  border-radius: 25px;
}

header .new-post-button {
  background-color: var(--main-color);
  color: white;
  border: none;
}

header .new-post-button span {
  padding-left: 0.3rem;
}

header .profile-button {
  margin-right: 0;
  padding-right: 0;
}

header .profile-name {
  margin-right: 0.2rem;
}

header .profile-picture {
  position: relative;
  width: 2.1rem;
  height: 2.1rem;
  right: 0;
  top: 0.72rem;
  display: inline-block;
  border-radius: 50%;
  background-color: var(--border-color);
  overflow: hidden;
}

header .profile-picture img{
  position: absolute;
  width: 100%;
  height: auto;
  object-fit: cover;
}

header .new-post-button:hover {
  color: white;
  background-color: var(--hover-dark-color);
  transition: 500ms;
}

header li a:hover {
  color: var(--main-color);
  border-color: var(--hover-border-color);
  transition: 500ms;
}

#toggle-nav, label #open-nav, label #close-nav {
  display: none;
}

.sidebar {
  position: fixed;
  top: var(--head-height);
  left: 0;
  width: 18rem;
  height: 100%;
  background-color: white;
  transition: all 300ms ease;
}

.sidebar * {
  text-decoration: none;
  list-style: none;
  font-size: 20px;
  padding: 0;
  user-select: none;
}

.sidebar .header-nav {
  padding-left: 3rem;
  line-height: 5rem;
  color: var(--main-color);
  border-bottom: 1px solid var(--border-color);
  font-weight: 500;
}

.sidebar ul a {
  display: block;
  box-sizing: border-box;
  padding-left: 3rem;
  line-height: 4rem;
  width: 100%;
  height: 100%;
  color: var(--normal-grey);
  border-right: 0 solid var(--border-color);
  border-bottom: 1px solid var(--border-color);
  transition: 500ms;
}

.sidebar ul i {
  text-align: center;
  width: 2rem;
}

.sidebar ul a:hover, .sidebar ul .active a{
  padding-left: 4rem;
  color: var(--main-color);
  border-right: 1rem solid var(--main-color);
  transition: 300ms;
}

@media (max-width: 992px) {
  main, footer {margin-left: 0;}

  header .logo {margin-left: 4.5rem;}
  header ul {margin-right: 1rem;}
  header li {margin: 0 0.2rem;}
  header .new-post-button span {display: none;}
  header .profile-button {padding: 0; border: none;}
  header .profile-name {display: none;}
  header .profile-picture {border: 2px solid var(--border-color); top:0.9rem}
  header .profile-picture:hover {border-color: var(--hover-border-color); transition: 500ms;}

  label #open-nav, label #close-nav {
    position: fixed;
    top: 1rem;
    left: 1rem;
    font-size: 22px;
    width: 2rem;
    text-align: center;
    padding: 0.2rem 0.2rem;
    border: 2px solid var(--border-color);
    border-radius: 0.5rem;
    cursor: pointer;
  }

  label #open-nav:hover, label #close-nav:hover {
    border-color: var(--hover-border-color); 
    color: var(--main-color); transition: 
    500ms;
  }

  label #open-nav {display: inline-block;}
  #toggle-nav:checked ~ label #open-nav{display: none;}
  #toggle-nav:checked ~ label #close-nav{display: inline-block;}

  .sidebar {
    left: -20rem;
  }
  #toggle-nav:checked ~ .sidebar {
    left: 0;
  }
}

